<resources>
    <string name="app_name">BollyQuiz</string>
    <string name="signIn">Sign In</string>
    <string name="signUp1">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">or</string>
    <string name="signUp"><u>Sign Up</u></string>
    <string name="check">Don\'t have an account yet?</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profileModel">Profile</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="remove"><u>REMOVE</u></string>
    <string name="change_pic"><u>CHANGE PIC</u></string>
    <string name="masters_in">Masters In</string>
    <string name="not_played_yet">NOT PLAYED YET</string>
    <string name="most_played">Most Played</string>
    <string name="category_title">Category Title</string>
    <string name="level">Level</string>
    <string name="settings">Settings</string>
    <string name="xp">XP</string>
    <string name="points">Points</string>
    <string name="quizzes">Quizzes</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="help">Help</string>
    <string name="status">Status</string>
    <string name="play">PLAY</string>
    <string name="category_level">Category: Level</string>
    <string name="subcategory">Subcategory</string>
    <string name="how_to_play"><u>How To Play</u></string>
    <string name="start_game">Start Game</string>
    <string name="game_over">GAME OVER</string>
    <string name="replay">REPLAY</string>
    <string name="stardom">Stardom</string>
    <string name="genre">Genre</string>
    <string name="class_level">Class</string>
    <string name="forgot_password_don_t_worry"><u> Forgot Password, Don\'t Worry </u></string>
    <string name="registered_email">Registered Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="struggler">struggler</string>
    <string name="star">star</string>
    <string name="superstar">superstar</string>
    <string name="summary">Summary</string>
    <string name="leaderboard_analytics">Leaderboard Analytics</string>
    <string name="most_played_location">Most Played |</string>
    <string name="since_date_joined">Since Date joined</string>
    <string name="location"> Location</string>
    <string name="powered_by">Powered by DB1981/9/11</string>
    <string name="be_patient_to_move_forward">Be Patient To Move Forward.</string>
    <string name="bolly_quiz">Bolly Quiz</string>
    <string name="the_ultimate_bollywood_trivia">The Ultimate Bollywood Trivia</string>
    <string name="surrender">Surrender?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_you_want_to_surrender">Are you sure, you want to surrender?</string>
    <string name="log_out_1">Log Out?</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
</resources>
