<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/main_profile"
        android:icon="@mipmap/ic_person_black_24dp"
        android:title="@string/profileModel" />
    <item
        android:id="@+id/menu_Settings"
        android:title="@string/settings"
        android:icon="@mipmap/ic_settings_black_24dp"/>
    <item
        android:id="@+id/about"
        android:icon="@mipmap/ic_info_black_24dp"
        android:title= "@string/about"/>
    <item
        android:id="@+id/feedback"
        android:icon="@mipmap/ic_feedback_black_24dp"
        android:title="@string/feedback"/>
    <item
        android:id="@+id/help"
        android:icon="@mipmap/ic_help_black_24dp"
        android:title="@string/help"/>

    <item
        android:id="@+id/main_logOut"
        android:icon="@mipmap/ic_exit_to_app_black_24dp"
        android:title="@string/log_out" />

</menu>