<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="comandydevo.wixsite.seemantshekhar43.bollyquiz.LogIn"
    tools:layout_editor_absoluteY="25dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_height="100sp"
        android:layout_width="100sp"
        android:layout_marginTop="72dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="16sp"
        android:layout_marginStart="16sp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20sp"
                android:backgroundTint="@android:color/background_light"
                android:drawableLeft="@mipmap/ic_email_white_24dp"
                android:drawablePadding="12sp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"

                android:maxLines="1"
                android:singleLine="false"
                android:textColor="@android:color/background_light"
                android:textColorHint="@android:color/background_light"
                android:textColorLink="@android:color/background_light" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/cnPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20sp"
                android:backgroundTint="@android:color/white"
                android:drawablePadding="12sp"
                android:drawableStart="@mipmap/ic_lock_outline_white_24dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@android:color/background_light"
                android:textColorHint="@android:color/background_light"
                android:textColorLink="@android:color/background_light" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="20sp"
            android:clickable="true"
            android:gravity="end"
            android:text="@string/forgot_password_don_t_worry"
            android:textColor="@color/randomDark"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/sign_in_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginTop="20sp"
            android:background="@drawable/btn_background"
            android:text="@string/signIn"
            android:textAllCaps="false"
            tools:text="@string/signIn" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/or"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            tools:text="@string/or" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/googleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginTop="10sp"
            android:text="@string/signIn"
            android:textAllCaps="false"
            tools:text="@string/signIn" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginTop="55sp"
            android:clickable="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/check"
                android:textColor="@android:color/darker_gray"
                android:textSize="18sp"
                android:textStyle="italic"
                tools:text="@string/check" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:onClick="SignUp"
                android:paddingLeft="4sp"
                android:text="@string/signUp"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="@string/signUp" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>