<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="comandydevo.wixsite.seemantshekhar43.bollyquiz.Result"
    android:background="@color/bggrey">
    <include
        android:id="@+id/result_page_toolbar"
        layout ="@layout/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/result_page_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10.1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/game_over"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingTop="5sp"
                android:text="@string/game_over"
                android:textColor="@color/colorAccent"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="7.8"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/result_user_thumb"
                android:layout_width="120sp"
                android:layout_height="120sp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/profileimg" />

            <TextView
                android:id="@+id/result_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/username"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="5sp"
            android:layout_weight="8"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/cardview_dark_background">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/darker_gray"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/result_stardom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-smallcaps"
                        android:gravity="center"
                        android:text="@string/stardom"
                        android:textColor="@color/bggrey"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/result_genre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-smallcaps"
                        android:gravity="center"
                        android:text="@string/genre"
                        android:textColor="@color/bggrey"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/result_class"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-smallcaps"
                        android:gravity="center"
                        android:text="@string/class_level"
                        android:textColor="@color/bggrey"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </android.support.v7.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10sp"
            android:layout_weight="8.5"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/cardview_dark_background">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/darker_gray"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/result_points"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8sp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-smallcaps"
                        android:gravity="center"
                        android:text="@string/points"
                        android:textColor="@color/bggrey"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/result_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="8sp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-smallcaps"
                        android:gravity="center"
                        android:text="@string/status"
                        android:textColor="@color/bggrey"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </android.support.v7.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:orientation="vertical">

            <Button
                android:id="@+id/result_replay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10sp"
                android:background="@drawable/btn_background"
                android:paddingEnd="50sp"
                android:paddingStart="50sp"
                android:text="@string/replay"
                android:textSize="18sp" />
        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
