<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="comandydevo.wixsite.seemantshekhar43.bollyquiz.WhereToGO">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/blur_gradient"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6">

        </LinearLayout>
 <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
             android:layout_weight="5"
             android:layout_gravity="center"
             android:gravity="center">

     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:scaleType="centerCrop"
         android:src="@mipmap/ic_launcher_round" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top|center_horizontal"
            android:layout_weight="5"
            android:gravity="top|center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20sp"
                android:gravity="center"
                android:text="@string/bolly_quiz"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/the_ultimate_bollywood_trivia"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="25sp"
                android:textStyle="italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="-30sp">

            <Button
                android:id="@+id/whereToLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="30sp"
                android:layout_marginStart="30sp"
                android:background="#FF7A7673"
                android:gravity="center"
                android:text="@string/title_activity_log_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/whereToSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="30sp"
                android:layout_marginStart="30sp"
                android:layout_marginTop="20sp"
                android:background="@color/grayLight"
                android:gravity="center"
                android:text="@string/signUp"
                android:textAllCaps="false"
                android:textSize="25sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
