<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bggrey"
    tools:context="comandydevo.wixsite.seemantshekhar43.bollyquiz.Start">
    <include
        android:id="@+id/start_page_toolbar"
        layout ="@layout/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/start_page_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="match_parent"
                android:layout_marginTop="20sp"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher_round"
                android:layout_gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/category_level"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/category_level"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/category_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/subcategory"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="italic" />

                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/play_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8sp"
                    android:layout_marginStart="8sp"
                    android:text="@string/play" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/how_to_play"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:layout_marginTop="160sp"
                android:clickable="true"
                android:gravity="bottom|center"
                android:text="@string/how_to_play"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
